--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,17 +17,19 @@ services:
       - DB_HOST=db
       - DB_NAME=devdb
       - DB_USER=devuser
-      - DB_PASSWORD=password
+      - DB_PASS=changeme
     depends_on:
       - db
   db:
     image: postgres:13-alpine
+    ports:
+      - 5432:5432
     volumes:
       - dev-db-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
-      - POSTGRES_PASSWORD=password
+      - POSTGRES_PASSWORD=changeme
 
 volumes:
   dev-db-data:
